--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -361,6 +361,10 @@ dl.user__koo {
   background: #c0c0c0;
   text-align: right;
 }
+.user__koo dt span {
+  font-size: small;
+  color: #808080;
+}
 
 .user__koo dd {
   //flex-basis: 60%;
