different color streetview link

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -393,6 +393,11 @@ dl.user__koo {
   text-overflow: ellipsis;
 }
 
+.streetview a {
+  color: #000;
+
+}
+
 @media (max-width: 320px) {
 
   .user__image {
