--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -342,7 +342,7 @@ abbr[title] {
 }
 
 .user__data {
-  width: 250px;
+  max-width: 250px;
 }
 
 .user__name {
@@ -404,6 +404,10 @@ dl.user__koo {
 
 @media (max-width: 320px) {
 
+  .user {
+    display: flex;
+  }
+  
   .user__image {
     width: 90px;
   }
@@ -414,7 +418,7 @@ dl.user__koo {
   }
 
   .user__data {
-    width: 180px;
+    max-width: 180px;
   }
 }
 
